src/cses/ferris_wheel/clang-tidy.txt
1 error generated.
Error while processing /Users/michael/repos/competitive-programming/src/cses/ferris_wheel/ferris_wheel.cpp.
/Users/michael/repos/competitive-programming/src/cses/ferris_wheel/ferris_wheel.cpp:3:10: error: 'algorithm' file not found [clang-diagnostic-error]
    3 | #include <algorithm>
      |          ^~~~~~~~~~~
Found compiler error(s).
